--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <li>Emoji reactions</li>
                 <li>More menu for additional actions</li>
             </ul>
-            <a class="link" href="https://example.com">Learn More</a> <!-- Added hyperlink -->
+            <a class="link" href="https://deeply-jewel-button.glitch.me/">Learn More</a> <!-- Added hyperlink -->
         </div>
     </div>
 </body>
